# t9s

./: .gitignore  .gitmodules  ARCHITECTURE.md  Cargo.toml  README.md  build.rs  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
dev/: seed.sh
docs/: kind-generator.md
docs/superpowers/specs/: 2026-03-20-standalone-activities-design.md
examples/: seed.rs
scripts/: debug-flow.ts  seed.ts
src/: action.rs  app.rs  app.ts  config.rs  event.rs  index.ts  lib.rs  main.rs  theme.rs  tui.rs  worker.rs
src/client/: grpc.rs  mod.rs  traits.rs
src/components/: index.ts
src/components/common/: FilterBar.ts  Loading.ts  Table.ts  index.ts
src/components/layout/: Footer.ts  Shell.ts  StatusBar.ts  TabBar.ts  index.ts
src/components/overlay/: CommandInput.ts  CommandPalette.ts  (+5 more)
src/config/: index.ts  savedViews.ts
src/domain/: activity.rs  activity_execution.rs  history.rs  mod.rs  namespace.rs  schedule.rs  task_queue.rs  workflow.rs
src/input/: commands.rs  commands.ts  index.ts  keyHandler.ts  types.ts
src/kinds/: mod.rs
src/nav/: location.rs  mod.rs  uri.rs
src/plugins/: context.ts  index.ts  manager.ts  types.ts
src/proto/: mod.rs
src/store/: actions.ts  index.ts  selectors.ts  types.ts
src/utils/: index.ts  logger.ts  time.ts
src/views/: index.ts
src/widgets/: activity_execution_detail.rs  collection.rs  command_input.rs  confirm_modal.rs  error_toast.rs  footer.rs  help_overlay.rs  mod.rs  namespace_selector.rs  schedule_detail.rs  schedule_list.rs  status_bar.rs  tab_bar.rs  workflow_detail.rs  workflow_list.rs
(+19 files in other folders)
