[package]
name = "t9s"
version = "0.1.0"
edition = "2021"
description = "k9s-style terminal UI for Temporal"

[lib]
doctest = false

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
color-eyre = "0.6"
thiserror = "2"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "5"
toml = "0.8"
clap = { version = "4", features = ["derive", "env"] }
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"
